--- a/burgers_chips_jackets.html
+++ b/burgers_chips_jackets.html
@@ -13,10 +13,10 @@
 </head>
 
 
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid navbar-conten">
-      <a class="navbar-brand" href="index.html">Loafers Sandwhich Bar</a>
+<body id="body">
+  <nav id="main-nav" class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid navbar-content">
+      <a class="navbar-brand main-nav" href="index.html">Loafers Sandwhich Bar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,17 +27,16 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle active" aria-current="page" href="menu.html" id="navbarDropdownMenuLink"
-              role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
               Menus
             </a>
-            <ul class="dropdown-menu nav-dropdown" aria-labelledby="navbarDropdownMenuLink">
+            <ul id="nav-dropdown" class="dropdown-menu nav-dropdown active" aria-current="page" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="menus.html">All Menus</a>
                 <hr>
               </li>
               <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
-              <li><a class="dropdown-item dropdown-current-page" href="burgers_chips_jackets.html">Burgers, Chips &
-                  Jackets</a></li>
+              <li><a id="current-dropdown" class="dropdown-item dropdown-current-page" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
               <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
               <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salads</a></li>
             </ul>
@@ -50,21 +49,21 @@
           </li>
         </ul>
         <div class="ms-auto">
-          <div id="dark-button" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">My Account</div>
+          <div id="dark-button" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
         </div>
       </div>
     </div>
   </nav>
 
   <div>
-    <h1 class="title">Burgers Chips and Jackets!</h1>
+    <h1 id="title" class="title">Burgers, CHips and Jackets!</h1>
   </div>
 
 
 
 
 
-  <section>
+  <section id="main-content">
     <div class="container menu-items">
       <h2 class="menu-title pt-5">Burgers:</h2>
       <div class="row">
