--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 
-<body>
+<body id="body">
   <nav id="main-nav" class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid navbar-content">
       <a class="navbar-brand main-nav" href="index.html">Loafers Sandwhich Bar</a>
@@ -31,7 +31,7 @@
               data-bs-toggle="dropdown" aria-expanded="false">
               Menus
             </a>
-            <ul class="dropdown-menu nav-dropdown" aria-labelledby="navbarDropdownMenuLink">
+            <ul id="nav-dropdown" class="dropdown-menu nav-dropdown" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="menus.html">All Menus</a>
                 <hr>
               </li>
@@ -62,8 +62,8 @@
 
 
 
-  <div id="main-content" class="container-fluid">
-    <div class="page-content">
+  <div class="container-fluid">
+    <div id="main-content" class="page-content">
       <p class="py-3">Situated in Somerset's county town of Taunton, Loafers has been open since 1978 and is still
         offering a great selection of hot and cold food from our shop located on the historic Bath Place.</p>
       <p class="py-3">Come and visit us for a great selection of breakfast rolls, daily roasts, burgers, paninis, wraps,
