--- a/paninis_wraps_roasts.html
+++ b/paninis_wraps_roasts.html
@@ -2,69 +2,66 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="styles.css" rel="stylesheet">
-    <link rel="icon" href="images/sandwich_logo.png">
-    <title>Paninis, Wraps & Roasts</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="styles.css" rel="stylesheet">
+  <link rel="icon" href="images/sandwich_logo.png">
+  <title>Paninis Wraps & Roasts</title>
 </head>
 
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid navbar-conten">
-            <a class="navbar-brand" href="index.html">Loafers Sandwhich Bar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" aria-current="page" href="menu.html"
-                            id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Menus
-                        </a>
-                        <ul class="dropdown-menu nav-dropdown" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="menus.html">All Menus</a>
-                                <hr>
-                            </li>
-                            <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
-                            <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a>
-                            </li>
-                            <li><a class="dropdown-item dropdown-current-page" href="paninis_wraps_roasts.html">Paninis,
-                                    Wraps & Roasts</a></li>
-                            <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salads</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="catering.html">Catering</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-                <div class="ms-auto">
-                    <div id="dark-button" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">My Account</div>
-                </div>
-            </div>
+<body id="body">
+  <nav id="main-nav" class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid navbar-content">
+      <a class="navbar-brand main-nav" href="index.html">Loafers Sandwhich Bar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Menus
+            </a>
+            <ul id="nav-dropdown" class="dropdown-menu nav-dropdown active" aria-current="page" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="menus.html">All Menus</a>
+                <hr>
+              </li>
+              <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
+              <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
+              <li><a id="current-dropdown" class="dropdown-item dropdown-current-page" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
+              <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salads</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="catering.html">Catering</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+        <div class="ms-auto">
+          <div id="dark-button" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
         </div>
-    </nav>
-
-    <div>
-        <h1 class="title">Paninis, Wraps and Roasts!</h1>
+      </div>
     </div>
+  </nav>
+
+  <div>
+    <h1 id="title" class="title">paninis, Wraps and Roasts!</h1>
+  </div>
 
 
 
-    <section>
+    <section id="main-content">
         <div class="container menu-items">
             <h2 class="menu-title pt-5">Paninis and Wraps:</h2>
             <div class="row">
