--- a/cold_fillings_salads.html
+++ b/cold_fillings_salads.html
@@ -33,7 +33,7 @@
             </a>
             <ul id="nav-dropdown" class="dropdown-menu nav-dropdown active" aria-current="page" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="menus.html">All Menus</a>
-                <hr>
+                <hr id="dropdown-hr">
               </li>
               <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
               <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
