--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             </a>
             <ul id="nav-dropdown" class="dropdown-menu nav-dropdown" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="menus.html">All Menus</a>
-                <hr>
+                <hr id="dropdown-hr">
               </li>
               <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
               <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
@@ -72,9 +72,12 @@
         we don't really deliver smaller orders but if it's a sensible order we'll certainly do what we can to get it to
         you.</p>
       <p class="pt-4 text-decoration-underline">Map Directions:</p>
+
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5020.22613213925!2d-3.1048!3d51.01406!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2df2125992726a7!2sLoafers%20Sandwich%20Bar!5e0!3m2!1sen!2sus!4v1647881626365!5m2!1sen!2sus"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <p id="weather-info"></p>
+
       <p class="pt-5 m-0 mt-3 text-decoration-underline">Further Enquires:</p>
       <p>if you have any further enquires, please fill out this form and we will email you back as soon as we can!</p>
 
@@ -114,6 +117,7 @@
 </footer>
 
 <script src="scripts/scripts.js"></script>
+<script src="scripts/weatherAPI.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
